package edu.hitsz.props;

public interface PropFactory {
    BaseProp createProp(int x, int y);
}
